[SNAPSHOT]
 * drop optional dependency on Apache commons-codec
 * add API - Dataporten (https://docs.dataporten.no/) (thanks to https://github.com/xibriz)
 * add API - Microsoft Azure Active Directory (Azure AD) (thanks to https://github.com/kaushalmall)

[5.0.0]
 * drop Java 7 backward compatibility support, become Java 8 only
 * add JSON token extractor for OAuth 1.0a (thanks to https://github.com/evstropovv)
 * add new API - uCoz (https://www.ucoz.com/) (thanks to https://github.com/evstropovv)
 * add PKCE (RFC 7636) support (Proof Key for Code Exchange by OAuth Public Clients) (thanks for suggesting to https://github.com/dieseldjango)
 * switch to use HTTP Basic Authorization by default in requests with need of
   (2.3.  Client Authentication) https://tools.ietf.org/html/rfc6749#section-2.3 Can be overrided in API class
 * add support for client_credentials grant type (thanks to https://github.com/vivin)
 * add support for RFC 7009 OAuth 2.0 Token Revocation (thanks to https://github.com/vivin)
 * add OAuth2Service signRequest method accepting just String, not OAuth2 Access Token Object.
   Remove signRequest from abstract OAuthService. 2.0 and 1.0a will be a bit more different now.
 * drop toString method from *Tokens to prevent leak of sensible data (token ans secrets) (thanks to https://github.com/rcaa)
 * add Apache HttpComponents HttpClient support in separate module (thanks to https://github.com/sschwieb)
 * add support for appsecret_proof in Facebook
 * update Facebook v2.8 -> v2.11 (version can be configured while constructing OAuthService - use FacebookApi.customVersion("2.11"))

[4.2.0]
 * DELETE in JdkClient permits, but not requires payload (thanks to https://github.com/miguelD73)
 * add new API - Frappe (https://github.com/frappe/frappe) (thanks to https://github.com/revant)
 * add new API - Etsy (https://www.etsy.com/) (thanks to https://github.com/efekocabas)

[4.1.2]
 * LinkedIn use Header to sign OAuth2 requests